--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section id="contact" class="contact-info">
         <h2>Contact Information</h2>
         <p>Email: <a href="mailto:hariadukkas@gmail.com">hariadukkas@gmail.com</a></p>
-        <p>Phone: +91 953 918 6382</p>
+        <p>Phone: +91 953 918 xxxx</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/hariadukkas">linkedin.com/in/hariadukkas</a></p>
         <p>GitHub: <a href="https://github.com/hariadukkas">github.com/hariadukkas</a></p>
     </section>
